--- a/config/editor.editor.basic_html.yml
+++ b/config/editor.editor.basic_html.yml
@@ -23,6 +23,7 @@ settings:
       - '|'
       - blockQuote
       - drupalInsertImage
+      - drupalMedia
       - '|'
       - heading
       - code
@@ -58,6 +59,8 @@ settings:
         - '<h4 id>'
         - '<h5 id>'
         - '<h6 id>'
+    media_media:
+      allow_view_mode_override: false
 image_upload:
   status: true
   scheme: public
