--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -14,6 +14,7 @@ module:
   ckeditor5: 0
   comment: 0
   config: 0
+  config_split: 0
   contact: 0
   content_moderation: 0
   contextual: 0
@@ -31,6 +32,8 @@ module:
   help: 0
   history: 0
   image: 0
+  layout_builder: 0
+  layout_discovery: 0
   link: 0
   media: 0
   media_library: 0
@@ -62,4 +65,6 @@ module:
 theme:
   olivero: 0
   claro: 0
+  simplecollege: 0
+  stark: 0
 profile: standard
