--- a/web/themes/custom/simplecollege/simplecollege.info.yml
+++ b/web/themes/custom/simplecollege/simplecollege.info.yml
@@ -4,3 +4,14 @@ description: "A test theme for my college website"
 core_version_requirement: ^9 || ^10 || ^11
 core: ^10
 base theme: stark
+regions:
+  header: Header
+  simplemenu: Navigation
+  hero: Hero
+  highlighted: Highlighted
+  breadcrumb: Breadcrumb
+  contentabove: Content Above
+  content: Content
+  sidebar: Sidebar
+  footertop: Footer Top
+  footerbottom: Footer Bottom
